# Quant-M

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LLM_PROJECT_ONBOARDING.md  README.md  SECURITY.md  SHIPPABLE.md  quant-m.toml  quantm
.agents/skills/model-project-onboarding/: SKILL.md
.agents/skills/project-context-intake/: SKILL.md
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
WikiSkill/: AGENTS.md
WikiSkill/raw/: 2026-07-10-empire-llm-model-routing-optimization.md
WikiSkill/wiki/: index.md  log.md
WikiSkill/wiki/concepts/: adaptive-council-routing.md
WikiSkill/wiki/sources/: empire-llm-model-routing-optimization.md
WikiSkill/wiki/syntheses/: quant-m-council-shadow-router.md
android-node-kit/WikiSkill/: AGENTS.md
android-node-kit/WikiSkill/raw/: android-usb-provisioning-instruction.md  android-usb-runtime-node-01-proposal.md  quant-m-edge-bundle-source.md
android-node-kit/WikiSkill/wiki/: index.md  log.md
android-node-kit/WikiSkill/wiki/concepts/: adb-usb-install.md  (+1 more)
android-node-kit/bootstrap/: bootstrap-termux.sh  node.env.example
android-node-kit/bundles/quant-m-edge-bundle/: README.md  manifest.toml  offline-install-termux.sh
android-node-kit/docs/edge/: ANDROID_USB_PROVISIONING.md  ANDROID_USB_RUNTIME_NODE_01.md
android-node-kit/inventory/: nodes.csv  nodes.example.csv
android-node-kit/scripts/: adb-stage-device.sh  build-termux-offline-mirror.py
configs/: council-shadow.example.json
configs/cron/: quant-m.cron
configs/nodes/: android-default.toml
configs/systemd/: quant-m.service
deploy/android/: README.md  adb-provision.sh  common.sh  health-check.sh  onboard.sh  push-runtime.sh  start-worker.sh
desks/forex/: carry_map.md  desk_policy.md  handoff.md  schema.md  skills.md
docs/: README.md  agent-cluster.md  agent-shell.md  assumptions.md  cmux-readiness.md  core-child-qr-pairing.md  definition-of-shippable.md  deploy-systemd.md  edge-runtime-minimization.md  feature-map.md  fuzz-baseline-v0.1.1.md  known-limitations.md  local-alpha-release-notes.md  non-goals.md  onboarding-mockup.html  open-questions.md  pi-edge-dependency-audit.md  pi-inspired-feature-hardening-plan.md  pi-termux-lan-validation.md  project-definition.md  project-spec.md  quant-m-skills.md  release-notes-v0.1.md  security-boundaries.md  serde_normalization.md  shared_state.md  tablet-pairing-e2e.md  terminal-cockpit-adapters.md  tui-shell.md  validation-plan.md
docs/adversarial/: codex-chat-hardening.md  provider-evidence-roadmap.md
docs/codex/: blockers.md  context-firewall.md  execution-plan.md  github-release-gate.md  goal-prompt.md  handoff-to-ui-ux.md  intake-summary.md  repair-loop.md  reuse-scan.md  rust-serde-json-sqlite-integrity-checklist.md
docs/contracts/: README.md  model-stack-recommendation.schema.json  ponboarding-handoff.schema.json  ponboarding-to-staff-os-handoff.md  repo-scorecard.schema.json
docs/fsm/: fsm-consolidation-audit.md  product-state-machines.md  project-execution-fsm.md  rust-fsm-authority-audit.md  side-effect-policy-gate-audit.md  workflow-cursor-fsm-audit.md
docs/governance/: runtime-doctrine.md
docs/release/: local-alpha-checklist.md  local-alpha-feature-matrix.md  v0.1.0-alpha.md  v0.1.0-beta.md
docs/validation/: child-heartbeat-revoke-p0c-b.md  child-join-request-p0c-a.md  wifi-first-pairing-url-fix.md
docs/validation-runs/: local-alpha-release-candidate-2026-06-27.md  pi-termux-lan-2026-06-27.md  real-device-lan-smoke-15a-2026-06-30.md
docs/wiki/: 08-reference-repos.md  MANIFEST.md
docs/wiki/external-docs/: README.md  hermes-agent-runtime.md  ironclaw-security-runtime.md  openclaw-agent-runtime.md  paperclip-agent-adapters.md  rust-official-runtime-patterns.md  serde-config-contracts.md  ycombinator-agentic-runtime-signals.md
docs/wiki/ingested/: 2026-05-31-agentic-rust-runtime-synthesis.md  README.md  agents-9f1717c3.md  carry_map-46dc2bb1.md  deploy-android-35173bda.md  deploy-systemd-92696538.md  desk_policy-05e2ca38.md  feature-map-69eb5fef.md  handoff-4dde788c.md  heartbeat-02523f7d.md  memory-90c7549a.md  processor-a8dc7a6f.md  quant-m-adversarial-review-2026-06-14-769e90f8.md  risk_policy-0be955b8.md  routing-ce11dcd4.md  schema-3ca9f775.md  skills-44088aaa.md  soul-f376f424.md  user-c1d39919.md
docs/wiki/raw/: README.md
docs/wiki/repo-ingest/: README.md
fixtures/compute/: boundary_ambiguous_peg_scan.json  evidence_freshness_scan.json  stablecoin_peg_deviation_scan.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: agent_shell_command.rs  config_toml.rs  execution_runtime_request.rs  forex_ingest_payload.rs  forex_macro_rows.rs  fsm_descriptor.rs  ingest_json.rs  scheduler_descriptor.rs  session_event.rs  shared_state_record.rs  workflow_descriptor.rs
scripts/: bench_worker_runtime.sh  benchmark_agent_frameworks.sh  bootstrap_project_onboarding.py  deploy_pi.sh  generate_goal_prompt.py  healthcheck.sh  ingest_wiki.py  lint_project_onboarding.py  pi_dependency_audit.sh  pi_lean_cleanup.sh  smoke_tui_chat.ps1  smoke_tui_chat.sh  swap_health.sh  validate_integrity.sh
src/: adapters.rs  agent_shell.rs  benchmark_cache.rs  boil.rs  bootstrap.rs  capabilities.rs  channels.rs  child_bootstrap.rs  child_pack_sync.rs  cluster.rs  cluster_boundary.rs  compaction.rs  config.rs  consensus.rs  context_decay.rs  context_firewall.rs  context_guardian.rs  context_status.rs  cost_ledger.rs  council_router.rs  daemon.rs  demo_flow.rs  desk_registry.rs  device.rs  device_telemetry.rs  domain.rs  execution_runtime.rs  forex.rs  fsm_authority.rs  fsm_core.rs  fsm_registry.rs  heartbeat.rs  lib.rs  llm.rs  logutil.rs  loop_dry_run.rs  main.rs  memory.rs  numeric_hotpath.rs  onboarding_router.rs  (+22 more)
src/compute/: backend.rs  bench_policy.rs  boundary.rs  capability.rs  fixtures.rs  mod.rs  scalar.rs  validation.rs
src/model_router/: mod.rs
src/pairing/: approval.rs  fingerprint.rs  invite.rs  mod.rs  qr.rs  request.rs  server.rs  storage.rs  token.rs
src/playbook/: mod.rs
workspace/: AGENTS.md  MEMORY.md  POLICY.md  QUANTM.md  SHIPPABLE.md  SOUL.md
(+54 files in other folders)
