[package]
name = "quant-m"
version = "0.1.0"
edition = "2024"
description = "Quant-M: lightweight local-first worker runtime inspired by OpenClaw patterns"
license = "MIT"

[features]
default = []
fuzzing_hooks = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
postcard = { version = "1", features = ["use-std"] }
redb = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "rt", "time", "signal", "process", "sync"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3.23"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
