[package]
name = "quant-m"
version = "0.1.0"
edition = "2024"
description = "Local-first flight recorder and control plane for AI-assisted work"
license = "MIT"
repository = "https://github.com/web5labs/Quant-M"
homepage = "https://github.com/web5labs/Quant-M"
documentation = "https://github.com/web5labs/Quant-M/tree/main/docs"
readme = "README.md"
keywords = ["agent", "cli", "replay", "governance", "local-first"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "/target/",
    "/workspace/*",
    "!/workspace/.gitkeep",
    "/fuzz/",
    "/desks/",
    "/strategist/",
    "/tmp/",
    "/temp/",
    "/scratch/",
    "/cache/",
    "/.cache/",
    "/.codex/",
    "/.cursor/",
    "/.vscode/",
    "/.DS_Store",
    "*.log",
    "*.local.toml",
    "*.secret",
    "*.secrets",
    "*.pem",
    "*.key",
    "*.sqlite",
    "*.sqlite3",
    "*.db",
    "*.db-*",
]

[features]
default = []
core-full = [
    "async-runtime",
    "binary-codec",
    "core-storage-redb",
    "core-storage-sqlite",
    "network-client",
    "terminal-ui",
    "pairing",
    "pairing-qr",
    "pairing-scan-image",
    "playbooks",
    "model-handoff",
    "model-router",
    "model-local-stub",
    "compute",
    "device-telemetry",
]
child-min = ["device-telemetry"]
child-termux = ["child-min", "device-telemetry-termux"]
child-pairing = ["pairing-client"]
child-scan-image = ["pairing-client", "pairing-scan-image"]
child-compute = ["compute"]
dev-all = [
    "core-full",
    "compute-bench",
    "model-openrouter",
    "model-openai-direct",
]
async-runtime = ["dep:tokio"]
binary-codec = ["dep:postcard"]
core-storage-redb = ["dep:redb"]
core-storage-sqlite = ["dep:rusqlite"]
network-client = ["dep:reqwest", "async-runtime"]
terminal-ui = ["dep:crossterm", "dep:ratatui"]
compute = []
compute-bench = ["compute"]
compute-simd-experimental = ["compute"]
device-telemetry = []
device-telemetry-termux = ["device-telemetry"]
device-telemetry-df-fallback = ["device-telemetry"]
playbooks = ["crypto-hash"]
model-handoff = ["playbooks"]
model-router = ["model-handoff"]
model-openrouter = ["model-router"]
model-openai-direct = ["model-router"]
model-local-stub = ["model-router"]
crypto-hash = ["dep:ring"]
random = ["dep:rand"]
pairing-client = ["crypto-hash", "random"]
pairing-server = ["pairing-client"]
pairing = ["pairing-client", "pairing-server"]
pairing-qr = ["dep:qrcode", "dep:image"]
pairing-scan-image = ["dep:rqrr", "dep:image", "dep:qrcode"]
pairing-live-camera-experimental = []
fuzzing_hooks = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", optional = true }
image = { version = "0.25", optional = true }
qrcode = { version = "0.14", optional = true }
rand = { version = "0.8", optional = true }
ratatui = { version = "0.29", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
ring = { version = "0.17", optional = true }
rqrr = { version = "0.10", optional = true }
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
postcard = { version = "1", features = ["use-std"], optional = true }
redb = { version = "3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "rt", "time", "signal", "process", "sync"], optional = true }
toml = "0.9"

[dev-dependencies]
tempfile = "3.23"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-core]
inherits = "release"
opt-level = 3
lto = "thin"

[profile.release-child]
inherits = "release"
opt-level = "z"
lto = true
strip = "symbols"
panic = "abort"
