[package]
name = "quant-m"
version = "0.1.0"
edition = "2024"
description = "Local-first flight recorder and control plane for AI-assisted work"
license = "MIT"
repository = "https://github.com/web5labs/Quant-M"
homepage = "https://github.com/web5labs/Quant-M"
documentation = "https://github.com/web5labs/Quant-M#readme"
readme = "README.md"
keywords = ["agent", "cli", "replay", "governance", "local-first"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "/target/",
    "/workspace/*",
    "!/workspace/.gitkeep",
    "/fuzz/",
    "/desks/",
    "/strategist/",
    "/tmp/",
    "/temp/",
    "/scratch/",
    "/cache/",
    "/.cache/",
    "/.codex/",
    "/.cursor/",
    "/.vscode/",
    "/.DS_Store",
    "*.log",
    "*.local.toml",
    "*.secret",
    "*.secrets",
    "*.pem",
    "*.key",
    "*.sqlite",
    "*.sqlite3",
    "*.db",
    "*.db-*",
]

[features]
default = []
core-full = []
fuzzing_hooks = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
if-addrs = "0.14"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
postcard = { version = "1", features = ["use-std"] }
redb = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.47", features = ["macros", "rt", "time", "signal", "process", "sync"] }
toml = "0.9"
thiserror = "2"

[dev-dependencies]
tempfile = "3.23"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
