[package]
name = "quant-m-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"

[dependencies.quant-m]
path = ".."
features = ["fuzzing_hooks"]

[[bin]]
name = "ingest_json"
path = "fuzz_targets/ingest_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "forex_ingest_payload"
path = "fuzz_targets/forex_ingest_payload.rs"
test = false
doc = false
bench = false

[[bin]]
name = "forex_macro_rows"
path = "fuzz_targets/forex_macro_rows.rs"
test = false
doc = false
bench = false

[[bin]]
name = "agent_shell_command"
path = "fuzz_targets/agent_shell_command.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_toml"
path = "fuzz_targets/config_toml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "shared_state_record"
path = "fuzz_targets/shared_state_record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "session_event"
path = "fuzz_targets/session_event.rs"
test = false
doc = false
bench = false

[[bin]]
name = "workflow_descriptor"
path = "fuzz_targets/workflow_descriptor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fsm_descriptor"
path = "fuzz_targets/fsm_descriptor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "scheduler_descriptor"
path = "fuzz_targets/scheduler_descriptor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "execution_runtime_request"
path = "fuzz_targets/execution_runtime_request.rs"
test = false
doc = false
bench = false
